modules/gdscript/tests/scripts/analyzer/errors/return_variant_in_void_func.gd
func test() -> void:
	var a
	a = 1
	return a
